fix word wrap, fix metadata caching

--- a/apps/web/app/funds/[fundContractId]/_components/FundDetail/FundDetail.module.css
+++ b/apps/web/app/funds/[fundContractId]/_components/FundDetail/FundDetail.module.css
@@ -6,3 +6,11 @@
   white-space: pre-line;
   font-size: var(--mantine-font-size-xl);
 }
+
+.text {
+  /* older browsers */
+  word-wrap: break-word;
+  /* newer standard */
+  overflow-wrap: break-word;
+  word-break: break-word;
+}
